Deployment/front-end/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: financio-ui-service
  namespace: develop
spec:
  selector:
    app: financio-ui
  ports:
  - name: http
    port: 3000
    targetPort: 3000
