Deployment/front-end/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: financio-ui-ingress
  namespace: develop
spec:
  rules:
  - host: ui.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: financio-ui-service
            port:
              number: 3000
